# rag

./: playground_embeddings.ipynb  pyproject.toml
chroma_db/: chroma.sqlite3
src/rag/: emb_utils.py  rag.py
