[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["theodorusblote <theodorusblote@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
chromadb = "^1.0.13"
openai = "^1.88.0"
sentence-transformers = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
